# 3DLibrary

./: README.md  log.txt
.bckup/: main.cpp  main2.cpp
3DLibrary/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
3DLibrary/public/wasm-library/: build.sh  install_libraries.sh
3DLibrary/src/: createWasmModule.ts  index.js  main.ts  renderView.ts  style.css
3DLibrary/src/utils/: MeshBufferUtils.js  MeshBufferUtils.ts  parseObj.js  parseObj.ts
3DLibrary/wasm-library/: CMakeLists.txt  main.cpp
3DLibrary/wasm-library/non-web/: CMakeLists.txt  app.cpp
